updated for numbers and better description

--- a/client/templates/posts/post_edit.html
+++ b/client/templates/posts/post_edit.html
@@ -17,7 +17,7 @@
      <div class="form-group {{errorClass 'FinalDate'}}">
       <label class="control-label" for="FinalDate">Final Date</label>
       <div class="controls">
-          <input name="FinalDate" id="FinalDate" type="text" value="{{FinalDate}}" placeholder="Final Date" class="form-control"/>
+          <input name="FinalDate" id="FinalDate" type="numbers" value="{{FinalDate}}" placeholder="Final Date" class="form-control"/>
           <span class="help-block">{{errorMessage 'title'}}</span>
       </div>
     </div>
@@ -45,14 +45,14 @@
      <div class="form-group {{errorClass 'TotalValue'}}">
       <label class="control-label" for="TotalValue">Valor Total</label>
       <div class="controls">
-          <input name="TotalValue" id="TotalValue" type="text" value="{{TotalValue}}" placeholder="Entre value total" class="form-control"/>
+          <input name="TotalValue" id="TotalValue" type="numbers" value="{{TotalValue}}" placeholder="Entre value total" class="form-control"/>
           <span class="help-block">{{errorMessage 'title'}}</span>
       </div>
     </div>
      <div class="form-group {{errorClass 'SuggestedValue'}}">
       <label class="control-label" for="SuggestedValue">Valor sugerido</label>
       <div class="controls">
-          <input name="SuggestedValue" id="SuggestedValue" type="text" value="{{SuggestedValue}}" placeholder="Valor Sugerido" class="form-control"/>
+          <input name="SuggestedValue" id="SuggestedValue" type="numbers" value="{{SuggestedValue}}" placeholder="Valor Sugerido" class="form-control"/>
           <span class="help-block">{{errorMessage 'title'}}</span>
       </div>
     </div>
