new description in the login

--- a/client/templates/login/login.html
+++ b/client/templates/login/login.html
@@ -3,22 +3,23 @@
         <div class="row">
 
             <div class="col-md-6">
-                <h2 class="font-bold">Welcome to IN+</h2>
+                <h2 class="font-bold">Chegou aos Porquinhos!</h2>
 
                 <p>
-                    Perfectly designed and precisely prepared admin theme with over 50 pages with extra new web app views.
+                    Vaquinhas Fáceis e Gratuitas
                 </p>
 
                 <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+                    Presentes de aniversário, festas, viagens … Os Porkinhos facilitam tudo!
                 </p>
 
                 <p>
-                    When an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                </p>
-
-                <p>
-                    <small>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</small>
+                    <p>1 - Crie em apenas uns cliques</p>
+                    <p><small>Para qualquer evento que tenha que angariar dinheiro em apenas uns cliques pode criar o seu porkinho.</small></p>
+                    <p>2 - Convide pessoas para participar</p>
+                    <p><small>Após inserir o email dos participantes, o porkinho convida diretamente os seus convidados a contribuírem.</small></p>
+                    <p>3 - Receba diretamente & Controle até atingir a sua meta</p>
+                    <p><small>100% gratuitamente. Controle e siga o seu porkinho até atingir a sua meta.</small></p>
                 </p>
 
             </div>
@@ -26,7 +27,7 @@
                 <div class="ibox-content">
                     <form class="m-t" role="form" action="{{pathFor route='dashboard1'}}">
                         <div class="form-group">
-                            <input type="email" class="form-control" name="email" placeholder="Username" required="">
+                            <input type="email" class="form-control" name="email" placeholder="Email" required="">
                         </div>
                         <div class="form-group">
                             <input type="password" class="form-control" placeholder="Password" name="password" required="">
@@ -34,27 +35,24 @@
                         <button type="submit" class="btn btn-primary block full-width m-b">Login</button>
 
                         <a href="#">
-                            <small>Forgot password?</small>
+                            <small>Esqueceu a sua password?</small>
                         </a>
 
                         <p class="text-muted text-center">
-                            <small>Do not have an account?</small>
+                            <small>Não tem conta?</small>
                         </p>
-                        <a class="btn btn-sm btn-white btn-block" href="{{pathFor route='register'}}">Create an account</a>
+                        <a class="btn btn-sm btn-white btn-block" href="{{pathFor route='register'}}">Crie já uma conta</a>
                     </form>
                     <p class="m-t">
-                        <small>Inspinia we app framework base on Bootstrap 3 &copy; 2014</small>
+                        <small>Feito a pensar em si!</small>
                     </p>
                 </div>
             </div>
         </div>
         <hr/>
         <div class="row">
-            <div class="col-md-6">
-                Copyright Example Company
-            </div>
             <div class="col-md-6 text-right">
-                <small>© 2014-2015</small>
+                <small>© 2016</small>
             </div>
         </div>
     </div>
