--- a/client/templates/login/register.html
+++ b/client/templates/login/register.html
@@ -1,11 +1,11 @@
 <template name="register">
     <div class="middle-box text-center loginscreen animated fadeInDown">
         <div>
-            <h1 class="logo-name">IN+</h1>
+            <h1 class="logo-name">Chegou aos Porquinhos!</h1>
         </div>
-        <h3>Register to IN+</h3>
+        <h3>Cadastre-se</h3>
 
-        <p>Create account to see it in action.</p>
+        <p>Cadastre-se para criar o seu primeiro Porquinho</p>
 
         <form class="m-t" role="form" action="#">
             <div class="form-group">
@@ -17,21 +17,17 @@
             <div class="form-group">
                 <input type="password" class="form-control" placeholder="Password" name="password" required="">
             </div>
-            <div class="form-group">
-                <div class="checkbox i-checks"><label> <input type="checkbox"><i></i> Agree the terms and policy
-                </label></div>
-            </div>
-            <button type="submit" class="btn btn-primary block full-width m-b">Register</button>
+            <button type="submit" class="btn btn-primary block full-width m-b">Cadastre-se</button>
 
             <p class="text-muted text-center">
-                <small>Already have an account?</small>
+                <small>Já tem uma conta?</small>
             </p>
             <a class="btn btn-sm btn-white btn-block" href="{{pathFor route='login'}}">Login</a>
         </form>
 
 
         <p class="m-t">
-            <small>Inspinia we app framework base on Bootstrap 3 &copy; 2014</small>
+            <small>Feito a pensar em si!</small>
         </p>
     </div>
 </template>
