--- a/client/templates/login/register.html
+++ b/client/templates/login/register.html
@@ -9,7 +9,7 @@
 
         <form class="m-t" role="form" action="#">
             <div class="form-group">
-                <input type="text" class="form-control" placeholder="Name" name="name">
+                <input type="text" class="form-control" placeholder="Username" name="name">
             </div>
             <div class="form-group">
                 <input type="email" class="form-control" placeholder="Email" name="email" required="">
