--- a/client/templates/posts/post_item.html
+++ b/client/templates/posts/post_item.html
@@ -1,15 +1,35 @@
 <template name="postItem">
-  <div class="post">
-    <a href="#" class="upvote btn btn-default {{upvotedClass}}">⬆</a>
-    <div class="post-content">
-      <h3><a href="{{url}}">{{NomePork}}</a><span>{{NomeBenef}}</span><span>{{EventType}}</span></h3>
-      <p>
-        {{pluralize votes "Vote"}},
-        submitted by {{author}},
-        <a href="{{pathFor 'postPage'}}">{{pluralize commentsCount "comment"}}</a>
-        {{#if ownPost}}<a href="{{pathFor 'postEdit'}}">Edit</a>{{/if}}
-      </p>
-    </div>
-    <a href="{{pathFor 'postPage'}}" class="discuss btn btn-default">Discuss</a>
+  <div class="project-list">
+    <table class="table table-hover">
+      <tbody>
+        <tr>
+          <td class="project-status">
+            <span class="label label-primary">Active</span>
+          </td>
+          <td class="project-title">
+            <a href="{{pathFor route='projectDetail'}}">{{NomePork}}</a>
+            <br/>
+            <small>Created 14.08.2014</small>
+          </td>
+          <td class="project-completion">
+            <small>Completion with: 48%</small>
+            <div class="progress progress-mini">
+              <div style="width: 48%;" class="progress-bar"></div>
+            </div>
+          </td>
+          <td class="project-people">
+            <a href=""><img alt="image" class="img-circle" src="img/a3.jpg"></a>
+            <a href=""><img alt="image" class="img-circle" src="img/a1.jpg"></a>
+            <a href=""><img alt="image" class="img-circle" src="img/a2.jpg"></a>
+            <a href=""><img alt="image" class="img-circle" src="img/a4.jpg"></a>
+            <a href=""><img alt="image" class="img-circle" src="img/a5.jpg"></a>
+          </td>
+          <td class="project-actions">
+            <a href="#" class="btn btn-white btn-sm"><i class="fa fa-folder"></i> View </a>
+            {{#if ownPost}}<a href="{{pathFor 'postEdit'}}" class="btn btn-white btn-sm"><i class="fa fa-pencil"></i>Edit</a>{{/if}}
+          </td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 </template>
