--- a/client/templates/posts/post_item.html
+++ b/client/templates/posts/post_item.html
@@ -7,7 +7,7 @@
             <span class="label label-primary">Active</span>
           </td>
           <td class="project-title">
-            <a href="{{pathFor route='projectDetail'}}">{{NomePork}}</a>
+            <a href="{{pathFor 'projectDetail'}}">{{NomePork}}</a>
             <br/>
             <small>Created 14.08.2014</small>
           </td>
