--- a/client/templates/new/formWizard.html
+++ b/client/templates/new/formWizard.html
@@ -52,7 +52,7 @@
                             <div class="step-content">
                             <div class="ibox-content">
                             <fieldset>
-                                <h2>2 - Personalize o seu Porkinho</h2>
+                                <h2>2 - Personalizar Porkinho</h2>
                                 <div class="row">
                                     <div class="col-lg-8">
                                         <div class="form-group">
