--- a/client/templates/common/top-navigation.html
+++ b/client/templates/common/top-navigation.html
@@ -12,7 +12,15 @@
                     <li class="active">
                         <a aria-expanded="false" role="button" href="{{pathFor 'dashboard4'}}"> Os meus Porkinhos</a>
                     </li>
-                    <li class="dropdown">
+                    <li class="button">
+                        <a aria-expanded="false" role="button" href="#"> Os meus Porkinhos </a>
+                    </li>
+                    <li class="button">
+                        <a aria-expanded="false" role="button" href="#" > Novo Porkinho</a>
+
+                    </li>
+
+                    <!--<li class="dropdown">
                         <a aria-expanded="false" role="button" href="#" class="dropdown-toggle" data-toggle="dropdown"> Menu item <span class="caret"></span></a>
                         <ul role="menu" class="dropdown-menu">
                             <li><a href="">Menu item</a></li>
@@ -20,34 +28,7 @@
                             <li><a href="">Menu item</a></li>
                             <li><a href="">Menu item</a></li>
                         </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a aria-expanded="false" role="button" href="#" class="dropdown-toggle" data-toggle="dropdown"> Menu item <span class="caret"></span></a>
-                        <ul role="menu" class="dropdown-menu">
-                            <li><a href="">Menu item</a></li>
-                            <li><a href="">Menu item</a></li>
-                            <li><a href="">Menu item</a></li>
-                            <li><a href="">Menu item</a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a aria-expanded="false" role="button" href="#" class="dropdown-toggle" data-toggle="dropdown"> Menu item <span class="caret"></span></a>
-                        <ul role="menu" class="dropdown-menu">
-                            <li><a href="">Menu item</a></li>
-                            <li><a href="">Menu item</a></li>
-                            <li><a href="">Menu item</a></li>
-                            <li><a href="">Menu item</a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a aria-expanded="false" role="button" href="#" class="dropdown-toggle" data-toggle="dropdown"> Menu item <span class="caret"></span></a>
-                        <ul role="menu" class="dropdown-menu">
-                            <li><a href="">Menu item</a></li>
-                            <li><a href="">Menu item</a></li>
-                            <li><a href="">Menu item</a></li>
-                            <li><a href="">Menu item</a></li>
-                        </ul>
-                    </li>
+                    </li> -->
 
                 </ul>
                 <ul class="nav navbar-top-links navbar-right">
