--- a/client/templates/new/projectDetail.html
+++ b/client/templates/new/projectDetail.html
@@ -2,7 +2,7 @@
 
     <!-- Page heading -->
     {{> pageHeading title='Project detail' category='App views' }}
-    {{> postItem}}
+
     <div class="row">
         <div class="col-lg-9">
             <div class="wrapper wrapper-content animated fadeInUp">
@@ -12,7 +12,7 @@
                             <div class="col-lg-12">
                                 <div class="m-b-md">
                                     <a href="#" class="btn btn-white btn-xs pull-right">Edit project</a>
-                                    <h2>Contract with Zender Company</h2>
+                                    <h2>{{NomePork}}</h2>
                                 </div>
                                 <dl class="dl-horizontal">
                                     <dt>Status:</dt> <dd><span class="label label-primary">Active</span></dd>
@@ -22,7 +22,7 @@
                         <div class="row">
                             <div class="col-lg-5">
                                 <dl class="dl-horizontal">
-                                    <dt>Created by:</dt> <dd>{{NomePork}}</dd>
+                                    <dt>Created by:</dt> <dd>Susana</dd>
                                     <dt>Messages:</dt> <dd>  162</dd>
                                     <dt>Client:</dt> <dd><a href="#" class="text-navy"> Zender Company</a> </dd>
                                     <dt>Version:</dt> <dd> 	v1.4.2 </dd>
