--- a/client/templates/new/formWizard.html
+++ b/client/templates/new/formWizard.html
@@ -1,89 +1,38 @@
 <template name="formWizard">
-
-
+​
+​
     <!-- Page heading -->
     {{> pageHeading title='Wizard' category='Forms' }}
-
+​
     <div class="wrapper wrapper-content animated fadeInRight">
         <div class="row">
             <div class="col-lg-12">
                 <div class="ibox float-e-margins">
                     <div class="ibox-title">
-                        <h5>Basic Wizzard</h5>
+                        <h5>Vaquinhas fáceis e gratuitas</h5>
                         {{>iboxTools}}
                     </div>
                     <div class="ibox-content">
-                        <p>
-                            Criar Porkinho
-                        </p>
+                    <h2>Criar Porkinho</h2>
                         <div id="wizard">
-                            <h1>First Step</h1>
+                            <h1>Criar</h1>
                             <div class="step-content">
-                                <div class="text-center m-t-md">
-                                    <h2>Hello in Step 1</h2>
-                                    <p>
-                                        This is the first content.
-                                    </p>
-                                </div>
-                            </div>
-
-                            <h1>Second Step</h1>
-                            <div class="step-content">
-                                <div class="text-center m-t-md">
-                                    <h2>This is step 2</h2>
-                                    <p>
-                                        This content is diferent than the first one.
-                                    </p>
-                                </div>
-                            </div>
-
-                            <h1>Third Step</h1>
-                            <div class="step-content">
-                                <div class="text-center m-t-md">
-                                    <h2>This is step 3</h2>
-                                    <p>
-                                        This is last content.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="ibox">
-                    <div class="ibox-title">
-                        <h5>Wizard with Validation</h5>
-                        {{>iboxTools}}
-                    </div>
-                    <div class="ibox-content">
-                        <h2>
-                            Validation Wizard Form
-                        </h2>
-                        <p>
-                            This example show how to use Steps with jQuery Validation plugin.
-                        </p>
-
-                        <form id="form" action="#" class="wizard-big">
-                            <h1>Account</h1>
+                            <div class="ibox-content">
                             <fieldset>
-                                <h2>Account Information</h2>
+                                <h2>1 - Criar Porkinhos</h2>
                                 <div class="row">
                                     <div class="col-lg-8">
                                         <div class="form-group">
-                                            <label>Username *</label>
-                                            <input id="userName" name="userName" type="text" class="form-control required">
+                                            <label>Nome do Porkinho *</label>
+                                            <input id="PorkName" name="PorkName" type="text" class="form-control required">
                                         </div>
                                         <div class="form-group">
-                                            <label>Password *</label>
-                                            <input id="password" name="password" type="text" class="form-control required">
+                                            <label>Escolha o tipo de evento*</label>
+                                            <input id="EventType" name="EventType" type="text" class="form-control required">
                                         </div>
                                         <div class="form-group">
-                                            <label>Confirm Password *</label>
-                                            <input id="confirm" name="confirm" type="text" class="form-control required">
+                                            <label>Adicione a data*</label>
+                                            <input id="FinalDate" name="FinalDate" type="text" class="form-control required">
                                         </div>
                                     </div>
                                     <div class="col-lg-4">
@@ -94,53 +43,85 @@
                                         </div>
                                     </div>
                                 </div>
-
+​
                             </fieldset>
-                            <h1>Profile</h1>
+                                </div>
+                            </div>
+​
+                            <h1>Personalizar</h1>
+                            <div class="step-content">
+                            <div class="ibox-content">
                             <fieldset>
-                                <h2>Profile Information</h2>
+                                <h2>2 - Personalize o seu Porkinho</h2>
                                 <div class="row">
-                                    <div class="col-lg-6">
+                                    <div class="col-lg-8">
                                         <div class="form-group">
-                                            <label>First name *</label>
-                                            <input id="name" name="name" type="text" class="form-control required">
+                                            <label>Escolha um icon ou insira uma fotografia</label>
+                                            <input id="ImagePork" name="ImagePork" type="text" class="form-control required">
                                         </div>
                                         <div class="form-group">
-                                            <label>Last name *</label>
-                                            <input id="surname" name="surname" type="text" class="form-control required">
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-6">
-                                        <div class="form-group">
-                                            <label>Email *</label>
-                                            <input id="email" name="email" type="text" class="form-control required email">
+                                            <label>Escreva uma descrição</label>
+                                            <input id="PorkDescription" name="PorkDescription" type="text" class="form-control required">
                                         </div>
                                         <div class="form-group">
-                                            <label>Address *</label>
-                                            <input id="address" name="address" type="text" class="form-control">
+                                            <label>Entre com o valor total para atingir o seu objetivo</label>
+                                            <input id="TotalValue" name="TotalValue" type="text" class="form-control required">
+                                        </div>
+                                        <div class="form-group">
+                                            <label>Sugerir montante por participante</label>
+                                            <input id="SuggestedValue" name="SuggestedValue" type="text" class="form-control required">
                                         </div>
                                     </div>
+                                    <div class="col-lg-4">
+                                        <div class="text-center">
+                                            <div style="margin-top: 20px">
+                                                <i class="fa fa-sign-in" style="font-size: 180px;color: #e5e5e5 "></i>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    </div>
+                            </fieldset>
                                 </div>
-                            </fieldset>
-
-                            <h1>Warning</h1>
+                            </div>
+​
+                            <h1>Partilhar</h1>
+                            <div class="step-content">
+                            <div class="ibox-content">
                             <fieldset>
-                                <div class="text-center" style="margin-top: 120px">
-                                    <h2>You did it Man :-)</h2>
+                                <h2>3 - Partilhe o seu Porkinho</h2>
+                                <div class="row">
+                                    <div class="col-lg-8">
+                                        <div class="form-group">
+                                            <label>Insira o email dos participantes</label>
+                                            <input id="UsersEmail" name="UsersEmail" type="text" class="form-control required">
+                                        </div>
+                                        <div class="form-group">
+                                            <label>Partilhe o link</label>
+                                            <input id="ShareLink" name="ShareLink" type="text" class="form-control required">
+                                        </div>
+                                        <div class="form-group">
+                                            <label>Como deseja que os seus amigos o paguem</label>
+                                            <input id="PaymentType" name="PaymentType" type="text" class="form-control required">
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-4">
+                                        <div class="text-center">
+                                            <div style="margin-top: 20px">
+                                                <i class="fa fa-sign-in" style="font-size: 180px;color: #e5e5e5 "></i>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    </div>
+                            </fieldset>
                                 </div>
-                            </fieldset>
-
-                            <h1>Finish</h1>
-                            <fieldset>
-                                <h2>Terms and Conditions</h2>
-                                <input id="acceptTerms" name="acceptTerms" type="checkbox" class="required"> <label for="acceptTerms">I agree with the Terms and Conditions.</label>
-                            </fieldset>
-                        </form>
+                            </div>
+                        </div>
+​
                     </div>
                 </div>
             </div>
-
         </div>
-    </div>
 
+    </div>
+​
 </template>
